--- a/layouts/shortcodes/articles-list.html
+++ b/layouts/shortcodes/articles-list.html
@@ -13,7 +13,7 @@
 {{- $articles_count := len $articles -}}
 {{- if gt $articles_count 0 -}}
 <details id="{{ with $id }}{{ . }}{{ end }}" class="articles-list {{ with $class }}{{ . }}{{ end }}" data-articles-count="{{ $articles_count }}" {{ if ne $closed "true" }}open{{ end }}>
-<summary><h2>{{ $title }}</h2></summary>
+<summary data-tags=""><h2>{{ $title }}</h2></summary>
 <div class="wrapper">
 {{- range first $items $articles.ByDate.Reverse -}}
 			{{ partial "article.html" . }}
