--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,7 +11,7 @@
 {{- end }}
 
 <link rel="stylesheet" href="{{ "/styles/screen.css" | relURL }}">
-<link rel="stylesheet" href="{{ "/scripts/fancybox/jquery.fancybox.css" | relURL }}">
+<link rel="stylesheet" href="{{ "/scripts/simple-lightbox/simple-lightbox.min.css" | relURL }}">
 {{ if (fileExists "static/styles/custom.css") -}}
 <link rel="stylesheet" href="{{ "/styles/custom.css" | relURL }}">
 {{- end }}
