--- a/layouts/shortcodes/articles-list.html
+++ b/layouts/shortcodes/articles-list.html
@@ -1,23 +1,21 @@
 {{- $types := (.Get "types") -}}
 {{- $tag := (.Get "tag") -}}
-{{- $tagfilter := (.Get "tagfilter") -}}
-{{- $items := or (.Get "items") 12 -}}
+{{- $filter := (.Get "filter") -}}
 {{- $id := (.Get "id") -}}
 {{- $class := (.Get "class") -}}
 {{- $title := (.Get "title") -}}
 {{- $closed := (.Get "closed") -}}
-{{- $articles := where (where .Site.AllPages ".IsPage" true) ".Lang" "eq" .Site.Language.Lang -}}
-{{- $articles := $articles | union (where .Site.AllPages ".Params.crosspost" true) -}}
-{{- $articles := union (where $articles ".Type" "in" $types) (where $articles ".Params.tags" "intersect" (slice $tag)) -}}
-{{- $articles := $articles | symdiff (where $articles ".Params.tags" "intersect" (slice $tagfilter)) -}}
-{{- $articles_count := len $articles -}}
-{{- if gt $articles_count 0 -}}
-<details id="{{ with $id }}{{ . }}{{ end }}" class="articles-list {{ with $class }}{{ . }}{{ end }}" data-articles-count="{{ $articles_count }}" {{ if ne $closed "true" }}open{{ end }}>
+{{- $lang := .Site.Language.Lang -}}
+<details id="{{ with $id }}{{ . }}{{ end }}" class="articles-list {{ with $class }}{{ . }}{{ end }}" {{ if ne $closed "true" }}open{{ end }}>
 <summary><h2>{{ $title }}</h2></summary>
 <div class="wrapper">
-{{- range first $items $articles.ByDate.Reverse -}}
+{{- range .Site.AllPages -}}
+	{{- if and (and (or (in $types .Type) (in .Params.tags $tag)) (eq .IsPage true)) (not (in .Params.tags $filter)) -}}
+		{{/* display articles from other languages */}}
+		{{- if (or (eq .Lang $lang) .Params.Crosspost) -}}
 			{{ partial "article.html" . }}
+		{{- end -}}
+	{{- end -}}
 {{- end -}}
 </div>
 </details>
-{{- end -}}
