--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,123 +25,7 @@
 					{{ partial "sharing.html" . }}
 				{{ end }}
 			</div>
-		{{ if and (ne .Site.Params.show_meta false) (ne .Params.show_meta false) -}}
-			<aside class="meta">
-
-				{{ if and (ne .Site.Params.show_toc false) (ne .Params.show_toc false) -}}
-					{{ if ge (len .TableOfContents) 150 }}
-					<details open>
-						<summary>{{ (i18n "contents") }}</summary>
-						{{.TableOfContents}}
-					</details>
-					{{ end }}
-				{{ end }}
-
-				<details>
-					<summary>{{ (i18n "post-details") }}</summary>
-					<dl>
-					{{ if .Params.dateCreated }}
-						<dt>{{ i18n "created-date" }}</dt>
-							<dd>{{ .Params.dateCreated }}</dd>
-					{{ else }}
-						<dt>{{ i18n "publish-date" }}</dt>
-							<dd>{{- if .Params.dateCreated -}}
-									{{- .Params.dateCreated -}}
-								{{- else -}}
-									{{- if isset $.Site.Params "date_format" -}}
-										{{- .Date.Format $.Site.Params.date_format -}}
-									{{- else -}}
-										{{- .Date.Format "2006-01-02" -}}
-									{{- end -}}
-								{{- end -}}
-							</dd>
-					{{ end }}
-
-					{{ if (lt (add .Date.Unix 63072000) now.Unix) }}
-						{{ $yearsElapsed := ( sub (int (now.Format "2006")) (int (.Date.Format "2006")) ) }}
-						<dd class="time">{{ $yearsElapsed }} {{ i18n "notice-outdated" | safeHTML }}</dd>
-					{{ end }}
-
-					{{ with .Params.DateRead }}
-						<dt>{{ i18n "read-date" }}</dt>
-							<dd>{{ . }}</dd>
-					{{ end }}
-
-					{{ with .Params.Rating }}
-						<dt>{{ i18n "rating" }}</dt>
-							<dd title="{{ . }}">
-								{{- range seq (int . ) }}★{{ end -}}
-							</dd>
-					{{ end }}
-
-					{{ with .Params.license }}
-						<dt>{{ i18n "license" }}</dt>
-						<dd>{{ . | plainify | markdownify }}</dd>
-					{{ end }}
-
-					{{ if .Params.Tags }}
-						<dt>{{ i18n "tags" }}</dt>
-						<dd class="tags">{{ range .Params.Tags -}}
-							<a href="/tags/{{ . | urlize }}" class="tag" rel="tag">{{ (i18n . ) }}</a>
-						{{- end }}</dd>
-					{{ end }}
-					</dl>
-				</details>
-
-				{{- if eq .Type "review" -}}
-				<details open>
-					<summary>{{ (i18n "publication-details") }}</summary>
-					<dl>
-					{{ with .Params.Publication.Title }}
-						<dt>{{ i18n "title" }}</dt>
-						<dd>
-						{{- if $.Params.Publication.URL }}<a href="{{ $.Params.Publication.URL }}">{{ end -}}
-						{{ . }}
-						{{- if $.Params.Publication.URL }}</a>{{ end -}}
-						</dd>
-					{{ end -}}
-					{{- with .Params.Publication.Subtitle }}
-						<dd>{{ . }}</dd>
-					{{ end -}}
-					{{- with .Params.Publication.TitleOriginal }}
-						<dd>{{ . }}</dd>
-					{{ end -}}
-					{{ with .Params.Publication.Author }}
-						<dt>{{ i18n "author" }}</dt>
-						<dd>{{ . }}</dd>
-					{{ end -}}
-					{{ with .Params.Publication.Publisher }}
-						<dt>{{ i18n "publisher" }}</dt>
-						<dd>{{ . }}</dd>
-					{{ end -}}
-					{{ with .Params.Publication.Published }}
-						<dt>{{ i18n "published" }}</dt>
-						<dd>{{ . }}</dd>
-					{{ end -}}
-					{{ with .Params.Publication.Pages }}
-						<dt>{{ i18n "pages" }}</dt>
-						<dd>{{ . }}</dd>
-					{{ end -}}
-					{{ if .Params.Publication.ISBN }}
-						<dt>ISBN</dt>
-						{{ range .Params.Publication.ISBN -}}
-							<dd>{{ . }}</dd>
-						{{- end }}
-					{{ end -}}
-					</dl>
-				</details>
-
-				{{ end }}
-
-				{{ with .Params.Meta }}
-				<details>
-					<summary>{{ i18n "post-meta" }}</summary>
-					{{ . | markdownify }}
-				</details>
-				{{ end }}
-
-			</aside>
-		{{- end }}
+			{{ if and (ne .Site.Params.show_meta false) (ne .Params.show_meta false) -}}{{ partial "meta" . }}{{ end }}
 		</header>
 		<div class="entry-content" itemprop="articleBody">
 			{{ .Content }}
