--- a/layouts/partials/ui.html
+++ b/layouts/partials/ui.html
@@ -1,5 +1,5 @@
 <div class="ui">
-	<a href="#top">↑</a>
+	<a id="totop" href="#top">↑</a>
 	<a id="theme-toggle">◑</a>
 </div>
 <script type="text/javascript">
