--- a/layouts/partials/sharing.html
+++ b/layouts/partials/sharing.html
@@ -1,6 +1,6 @@
-<aside class="sharing">
+<div class="sharing">
 	<details>
 	<summary>{{ i18n "share" }}</summary>
 		<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?s=100&p[url]={{ .Permalink | absURL | htmlEscape }}">{{ i18n "share-facebook" }}</a><a target="_blank" href="https://twitter.com/intent/tweet?original_referer=&source=tweetbutton&text={{ with .Params.description }}{{ . | htmlEscape }}{{ " → " | htmlEscape }}{{ end }}&url={{ .Permalink | absURL | htmlEscape }}">{{ i18n "share-twitter" }}</a><a target="_blank" href="mailto:?subject=FYI:%20{{ .Title | htmlEscape }}&body={{ with .Params.description }}{{ . | htmlEscape }}{{ " → " | htmlEscape }}{{ end }}{{ .Permalink | absURL | htmlEscape }}">{{ i18n "share-email" }}</a>
 	</details>
-</aside>
+</div>
